# qt-training

./: README.md
b64/: Makefile  b64  b64.pro  main.cpp
calculator/: CMakeLists.txt  calculator.pro  cmd.bat  index.html  mywindow.cpp  mywindow.h
calculator/img/: index.html
calculator2/: Makefile  calculator.pro  calculator2  main.cpp  mywindow.cpp  mywindow.h  res.qrc
